@@ -1,4 +1,5 @@
 <div id="header">
 <%= render :partial => 'layouts/title' %>
+<div style="margin-top:0.25em;font-size:18pt;">http://github.com/ryanlowe/ottawaruby-security</div>
 <%= render :partial => 'layouts/top_right' %>
 </div>
