@@ -2,7 +2,7 @@
 <div id="tabs">
   <ul class="collapsed menu">
     <li class="first"><%= link_to 'Home', home_url %></li>
-    <li><%= link_messages %></li>
+    <!--li><%= link_messages %></li-->
     <li><%= link_to 'People', people_url %></li>
   </ul>
 </div>
