@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Jump Off</title>
+  <title>OttawaRuby Security</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <link href="/stylesheets/application.css" media="all"   rel="stylesheet" type="text/css" />
   <link href="/stylesheets/print.css"       media="print" rel="stylesheet" type="text/css" />
@@ -10,7 +10,7 @@
 <div id="page">
 <div id="header">
   <div id="title">
-    <a href="/">Jump Off</a>
+    <a href="/">OttawaRuby Security</a>
   </div>
 </div>
 <div id="tabs">
