@@ -1,3 +1,4 @@
 
 Mar 24
+- customize for OttawaRuby Security
 = start with jump_off http://github.com/ryanlowe/jump_off
